clean up image processing

--- a/my_components/data/upload-image.html
+++ b/my_components/data/upload-image.html
@@ -230,6 +230,7 @@
     // console.log(this.uploader);
     // console.log(uploadValue);
     // this.fileName = 'test_file_name.jpeg'
+    this.fileName = this.$.uploader.files[0].name;
 
     this.initiateUpload();
     
