--- a/src/beer-menu.html
+++ b/src/beer-menu.html
@@ -244,11 +244,11 @@
       </div>
 
         <paper-dialog-scrollable>
-            <upload-image org-id="[[orgId]]" type="banner" file-name="[[nameUrl]]_BEER_banner" key="category/BEER/image"></upload-image>   
+            <upload-image org-id="[[orgId]]" type="banner" file-name="[[nameUrl]]_MENU_banner" key="category/MENU/image"></upload-image>   
             <paper-textarea label="Description" value="{{category.description}}" maxlength=2000 char-counter></paper-textarea>
           </paper-dialog-scrollable>
 
-      <div class="">
+      <div>
         <paper-button dialog-dismiss autofocus>CLOSE</paper-button>
       </div>
     </paper-dialog>
