--- a/src/beer-pub.html
+++ b/src/beer-pub.html
@@ -313,7 +313,8 @@
       </div>
       <paper-dialog-scrollable>
         <beer-pub-edit 
-          org-id="[[orgId]]" 
+          org-id="[[orgId]]"
+          name-url="[[nameUrl]]" 
           owner="[[owner]]">
         </beer-pub-edit>
       </paper-dialog-scrollable>
