--- a/src/beer-review.html
+++ b/src/beer-review.html
@@ -60,7 +60,7 @@
               <style>
               
               </style>
-        <div class=""> 
+        <div> 
             <h3>[[category.title]]</h3>
         </div>
         <paper-dialog-scrollable>
@@ -69,7 +69,7 @@
           </template>
         </paper-dialog-scrollable>  
 
-        <div class="">
+        <div>
           <paper-button dialog-dismiss autofocus>CLOSE</paper-button>
         </div>
       </paper-dialog>
