--- a/src/beer-tap.html
+++ b/src/beer-tap.html
@@ -243,6 +243,9 @@
           <upload-image org-id="[[orgId]]" type="banner" file-name="[[nameUrl]]_TAP_banner" key="category/TAP/image"></upload-image>   
           <paper-textarea label="Description" value="{{category.description}}" maxlength=2000 char-counter></paper-textarea>
         </paper-dialog-scrollable>
+        <div>
+          <paper-button dialog-dismiss autofocus>CLOSE</paper-button>
+        </div>
       </template>
       <div class="">
         <paper-button dialog-dismiss autofocus>CLOSE</paper-button>
