--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -100,7 +100,7 @@
           <h3>[[category.title]]</h3>
       </div>
       <paper-dialog-scrollable>
-          <upload-image org-id="[[orgId]]" type="banner" file-name="[[nameUrl]]_CONTACT_banner" key="category/TAP/image"></upload-image>   
+          <upload-image org-id="[[orgId]]" type="banner" file-name="[[nameUrl]]_CONTACT_banner" key="category/CONTACT/image"></upload-image>   
           <paper-textarea label="Description" value="{{category.description}}" maxlength=2000 char-counter></paper-textarea>
         </paper-dialog-scrollable>
 
