--- a/src/beer-tap.html
+++ b/src/beer-tap.html
@@ -142,9 +142,9 @@
     </div>
    </template>
 
-   <iron-media-query query="max-width: 767px" query-matches="{{smallScreen}}"></iron-media-query>
+   <iron-media-query query="max-width: 640px" query-matches="{{smallScreen}}"></iron-media-query>
    <div hidden="[[smallScreen]]">
-   <div class="card" elevation="1">
+   <div class="card">
     <a aria-label$="Cast to Television" href$="/[[nameUrl]]/tv?orgid=[[orgId]]" target="_blank">
      <iron-icon icon="beer-icons:cast"></iron-icon>
      Cast to Television
