--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -73,7 +73,7 @@
         --app-primary-color: #303030;
         --app-secondary-color: #757575;
         --app-accent-color: #172C50;
-        --app-selected-color: #FF5722;
+        --app-selected-color: #F07310;
         --paper-button-ink-color: var(--app-accent-color);
         --paper-icon-button-ink-color: var(--app-accent-color);
         --paper-spinner-color: var(--app-accent-color);
