--- a/src/beer-home.html
+++ b/src/beer-home.html
@@ -51,7 +51,7 @@
 
     .card{
       padding: 10px;
-      margin: 10px;
+      margin: 15px 10px;
       @apply --paper-material-elevation-1;
     }
 
