--- a/src/beer-tv-card.html
+++ b/src/beer-tv-card.html
@@ -21,10 +21,9 @@
     <style include="paper-material-styles">
 
       .card{
-        margin: 10px;
-        padding:10px;
+        margin: 10px 20px;
+        padding:10px 20px;
         @apply --paper-material-elevation-0;
-        width: 45vw;
       }
 
       .columnWidth--1{
@@ -32,19 +31,19 @@
       }
 
       .columnWidth--2{
-        width: 45vw;
+        width: 41vw;
       }
 
       .columnWidth--3{
-        width: 29vw;
+        width: 25vw;
       }
 
       .columnWidth--4{
-        width: 20vw;
+        width: 18vw;
       }
 
       .columnWidth--5{
-        width: 15vw;
+        width: 13vw;
       }
 
       .columnWidth--6{
