--- a/src/beer-tv-dialog.html
+++ b/src/beer-tv-dialog.html
@@ -77,6 +77,7 @@
           <div> 
             <iron-image src="/images/beer-icon-22.png"></iron-image>
           </div>
+          <div> [[_addOne(cardIndex)]] of [[numberOfDialogs]]</div>
         </div>
     </div>
   </template>
@@ -95,7 +96,16 @@
 
         theme:{
           type: String
-        }
+        },
+
+        cardIndex:{
+          type:Number
+        },
+
+         numberOfDialogs:{
+          type:Number
+        },
+
     }, 
 
     behaviors: [
@@ -109,6 +119,7 @@
 
     _renderOpened: function() {
       this.cancelAnimation();
+      // this.modal=true;
       this.playAnimation('entry');
     },
 
@@ -123,6 +134,9 @@
       } else {
         this._finishRenderClosed();
       }
+    },
+    _addOne: function (index){
+      return index+1;
     }
 
   });
