--- a/src/beer-home.html
+++ b/src/beer-home.html
@@ -185,7 +185,7 @@
             distance="[[pub.distance]]"  
             photo-url="[[pub.mainImage.banner.url]]"
             thumbnail="[[pub.mainImage.banner.thumbnail]]"
-            sponsor="[[pub.PREMIUM]]"
+            plan="[[pub.plan]]"
             dog-friendly="[[!pub.dogFriendly]]"
             patio="[[!pub.patio]]"
             over21="[[!pub.over21]]"
