--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!--<meta name="apple-mobile-web-app-capable" content="yes">-->
 
   <title>Beer-Fly</title>
-
+  
   <link rel="shortcut icon" sizes="29x29" href="/images/beer-icon-29.png">
   <link rel="apple-touch-icon" href="/images/beer-icon-44.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/images/beer-icon-152.png">
@@ -16,13 +16,14 @@
   <link rel="apple-touch-icon" sizes="167x167" href="/images/beer-icon-167.png">
 
   <link rel="apple-touch-startup-image" href="/images/beer-icon-1024.png">
-
+  
 
 
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
 
   <link rel="import" href="/src/beer-app.html" async>
+
 
   <style>
 
@@ -51,10 +52,20 @@
   </style>
 
 </head>
+
+ <script>
+    ShadyDOM = {
+      force: true
+    }
+  </script>
+
 <body>
 
   <beer-app unresolved>Beer-Fly</beer-app>
-  
+ 
+
+  <!--<script src="https://js.stripe.com/v3/"></script>-->
+
 
   <script>
     window.performance && performance.mark && performance.mark('index.html');
@@ -62,12 +73,18 @@
     Polymer = {lazyRegister: true, dom: 'shadow'};
 
     (function() {
+      //  ShadyDOM = {
+      //     force: true
+      //   }
+
       if ('registerElement' in document
           && 'import' in document.createElement('link')
           && 'content' in document.createElement('template')) {
+            console.log('platform is good')
         // platform is good!
       } else {
         // polyfill the platform!
+        console.log('polyfill the platform')
         var e = document.createElement('script');
         e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
         document.body.appendChild(e);
