--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -407,7 +407,7 @@
         <a name="favorite" aria-label="My favorites" href$="/[[nameUrl]]/favorite[[orgParam]]"><iron-icon class="drawer-icon" icon="beer-icons:favorite"></iron-icon>Favorites</a>
       </iron-selector>
 
-      <div class="extra-links" hidden$="[[verified]]" on-tap="_verifyAccount"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Verify email</div>
+      <div class="extra-links" hidden$="[[verified]]" on-tap="_verifyAccount"><iron-icon class="drawer-icon" icon="beer-icons:warning"></iron-icon>Verify email</div>
       <div class="extra-links" hidden$="[[!user]]" on-tap="_logout"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Sign out</div>
       <div class="extra-links" hidden$="[[user]]" on-tap="_login"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Sign in</div>
       <div class="extra-links">Terms of use</div>
