--- a/src/beer-search.html
+++ b/src/beer-search.html
@@ -323,7 +323,7 @@
           case 'BREWERY':
             searchMessage = 'Brewery'
             break;
-          case 'Beer':
+          case 'BEER':
             searchMessage = 'Beer'
             break;
           case 'CIDERY':
