--- a/src/beer-review.html
+++ b/src/beer-review.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../bower_components/neon-animation/animations/slide-from-right-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/slide-right-animation.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
@@ -9,6 +8,8 @@
 <link rel="import" href="beer-fab.html">
 <link rel="import" href="beer-review-card.html">
 <link rel="import" href="beer-rating-card.html">
+<link rel="import" href="beer-banner.html">
+
 
 
 <dom-module id="beer-review">
@@ -32,13 +33,12 @@
     </style>
     <firebase-auth app-name="beer" user="{{user}}"></firebase-auth>
 
-    <iron-image 
-        style="width:100%; height:300px; background-color: #F8F8F8;"
-        sizing="cover" 
-        preload 
-        fade
-        src="[[photoUrl]]">
-    </iron-image>
+    <beer-banner
+      google-photo="[[place.photos]]"
+      photo-index="6"
+      photo="[[category.image]]"
+      org-id="[[orgId]]">
+    </beer-banner>
     
   
     <beer-fab owner="[[owner]]" on-tap="_edit"></beer-fab>
