--- a/src/beer-favorite.html
+++ b/src/beer-favorite.html
@@ -55,6 +55,15 @@
             <beer-login class="item"></beer-login>
       </div>
       <div class="wrapper" hidden="[[!user]]">
+
+        <div class="item message">
+          Your favorite Beer-Crawls
+         </div>
+         <div class="item">
+            <beer-button>
+              <a aria-label="My Favorite Beer Crawls" href="/home/favorite/crawl">My Favorite Beer-Crawls</a>
+            </beer-button>
+          </div>
           
          <div class="item message">
           Beers you have selected as four or five stars.
