Added crawl menu to home

--- a/src/beer-contact-card.html
+++ b/src/beer-contact-card.html
@@ -44,6 +44,12 @@
         </a>
       </div>
 
+      <div>
+        <a href="[[place.url]]">
+          Map
+        </a>
+      </div>
+
     </div>
   </div>
   </template>
