--- a/src/beer-place-data.html
+++ b/src/beer-place-data.html
@@ -110,7 +110,7 @@
               places.getDetails(parameter, function (result, status){
                     that.data = result;
 
-                    console.log('google_place', result);
+                    // console.log('google_place', result);
 
                     if(result){
                       result.cacheTimestamp = Date.now()+86400000;
